# Ream

./: .gitignore  README.md  meson.build
.github/workflows/: doxygen.yml
docs/: _r_blend_mode_8h_source.html  _r_content_type_8h_source.html  _r_core_8h_source.html  _r_d_m_a_buffer_info_8h_source.html  _r_d_r_m_format_8h_source.html  _r_d_r_m_framebuffer_8h_source.html  _r_d_r_m_platform_handle_8h_source.html  _r_d_r_m_timeline_8h_source.html  _r_device_8h_source.html  _r_dumb_buffer_8h_source.html  _r_e_g_l_extensions_8h_source.html  _r_e_g_l_image_8h_source.html  _r_g_b_m_bo_8h_source.html  _r_g_l_context_8h_source.html  _r_g_l_core_8h_source.html  _r_g_l_device_8h_source.html  _r_g_l_extensions_8h_source.html  _r_g_l_format_8h_source.html  _r_g_l_image_8h_source.html  _r_g_l_image_wrap_8h_source.html  _r_g_l_make_current_8h_source.html  _r_g_l_painter_8h_source.html  _r_g_l_pass_8h_source.html  _r_g_l_program_8h_source.html  _r_g_l_shader_8h_source.html  _r_g_l_strings_8h_source.html  _r_g_l_swapchain_w_l_8h_source.html  _r_g_l_sync_8h_source.html  _r_g_l_texture_8h_source.html  _r_gamma_l_u_t_8h_source.html  _r_image_8h_source.html  _r_image_filter_8h_source.html  _r_image_wrap_8h_source.html  _r_lock_guard_8h_source.html  _r_log_8h_source.html  _r_matrix_utils_8h_source.html  _r_o_f_platform_handle_8h_source.html  _r_object_8h_source.html  _r_painter_8h_source.html  _r_pass_8h_source.html  (+208 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_1a.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+46 more)
doxygen/: Doxyfile  Layout.xml
doxygen/md/: Abstraction.md  Contact.md  Environment.md  Examples.md  MainPage.md
scripts/: env.sh
scripts/docs/: gen_doc.sh
src/CZ/Ream/: CZReamVersion.h.in  RBlendMode.h  RContentType.h  RCore.cpp  RCore.h  RDMABufferInfo.h  RDevice.cpp  RDevice.h  RGammaLUT.cpp  RGammaLUT.h  RImage.cpp  RImage.h  RImageFilter.h  RImageWrap.h  RLockGuard.cpp  RLockGuard.h  RLog.cpp  RLog.h  RMatrixUtils.cpp  RMatrixUtils.h  RObject.h  RPainter.cpp  RPainter.h  RPass.cpp  RPass.h  RPassCap.h  RPlatformHandle.cpp  RPlatformHandle.h  RPresentationTime.h  RResourceTracker.cpp  RResourceTracker.h  RSubPixel.h  RSubpixel.h  RSurface.cpp  RSurface.h  RSurfaceGeometry.h  RSwapchain.h  RSync.cpp  RSync.h  RVersion.h  (+2 more)
src/CZ/Ream/DRM/: RDRMFormat.cpp  RDRMFormat.h  RDRMFramebuffer.cpp  RDRMFramebuffer.h  RDRMPlatformHandle.cpp  RDRMPlatformHandle.h  RDRMTimeline.cpp  RDRMTimeline.h  RDumbBuffer.cpp  RDumbBuffer.h
src/CZ/Ream/EGL/: REGLExtensions.h  REGLImage.cpp  REGLImage.h
src/CZ/Ream/GBM/: RGBMBo.cpp  RGBMBo.h
src/CZ/Ream/GL/: RGLContext.cpp  RGLContext.h  RGLCore.cpp  RGLCore.h  RGLDevice.cpp  RGLDevice.h  RGLExtensions.h  RGLFormat.cpp  RGLFormat.h  RGLImage.cpp  RGLImage.h  RGLImageWrap.h  RGLMakeCurrent.cpp  RGLMakeCurrent.h  RGLPainter.cpp  RGLPainter.h  RGLPass.cpp  RGLPass.h  RGLProgram.cpp  RGLProgram.h  RGLShader.cpp  RGLShader.h  RGLStrings.cpp  RGLStrings.h  RGLSwapchainWL.cpp  RGLSwapchainWL.h  RGLSync.cpp  RGLSync.h  RGLTexture.h
src/CZ/Ream/GL/EGL/: REGLExtensions.h  REGLProcs.h  REGLString.cpp  REGLString.h
src/CZ/Ream/OF/: ROFPlatformHandle.h
src/CZ/Ream/RS/: RRSCore.cpp  RRSCore.h  RRSDevice.cpp  RRSDevice.h  RRSImage.cpp  RRSImage.h  RRSPainter.cpp  RRSPainter.h  RRSPass.cpp  RRSPass.h  RRSSwapchainWL.cpp  RRSSwapchainWL.h
src/CZ/Ream/SK/: RSKColor.h  RSKContext.cpp  RSKContext.h  RSKFormat.cpp  RSKFormat.h  RSKImageWrap.h  RSKPass.cpp  RSKPass.h
src/CZ/Ream/VK/: RVKCore.cpp  RVKCore.h  RVKDevice.cpp  RVKDevice.h  RVKExtensions.h  RVKFormat.cpp  RVKFormat.h  RVKImage.cpp  RVKImage.h  RVKPainter.cpp  RVKPainter.h  RVKPass.cpp  RVKPass.h  RVKPipeline.cpp  RVKPipeline.h  RVKSwapchainWL.cpp  RVKSwapchainWL.h  RVKSync.cpp  RVKSync.h
src/CZ/Ream/VK/shaders/: color.frag  effect.frag  image.frag  painter.vert
src/CZ/Ream/WL/: RWLFormat.h  RWLPlatformHandle.cpp  RWLPlatformHandle.h  RWLSubpixel.h  RWLSwapchain.cpp  RWLSwapchain.h
src/examples/cz-ream-wl-swapchain/: main.cpp  meson.build
src/examples/ream/: main.cpp  meson.build
